--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -4,7 +4,7 @@ Sociālā lomu spēle ``Mafija'' ir plaši pazīstama.
 Tā ir pieejama vairākos paveidos un formātos, kā arī piedāvā neierobežotu skaitu konfigurāciju un lomu.
 Spēlētāju ērtībai tiek piedāvāts lietotnes formāts, kas ietver norādījumus, informējot lietotāju par pieejamajām iespējām, un skaidrojumus, aprakstot spēles elementus un saskarni, ar mērķi vienkāršot tās spēlēšanu.
 Tirgus izpēte apliecina, ka ir pieejami vairāki, nepilnvērtīgi risinājumi.
-Programmatūras prasību specifikācija apraksta sistēmas pamatprasības ar papildus funkcionalitāti, tostarp lomu klāsta papildināšanu, spēles konfigurāciju izveidi, kā arī priviliģēta lietotāja stāvokli (maksas lietotāja), izmantojot abonamenta formāta maksājumu sistēmu.
+Programmatūras prasību specifikācija apraksta sistēmas pamatprasības ar papildus funkcionalitāti, tostarp lomu klāsta papildināšanu, spēles konfigurāciju izveidi, kā arī priviliģēta lietotāja stāvokli (maksas lietotāja), izmantojot abonementa balstītu maksājumu sistēmu.
 
 \textbf{Atslēgvārdi:}
 Mafijas spēle, sistēmas prasības, specifikācijas dokuments, programmatūras uzlabošana, lomu spēles mehānika, vienkāršota spēlēšana, organizatoriski risinājumi, programmatūras prasību specifikācija, lietotāju veidots saturs, abonamenta maksājumi, maksas lietotājs.
