--- a/src/description/dependencies.tex
+++ b/src/description/dependencies.tex
@@ -1,8 +1,13 @@
 \subsection{Pieņēmumi un atkarības}
 \begin{itemize}
 	\item Platformu veidojošās datnes, datu bāzes, kontrolieri tiks mitināti pie viena mitināšanas pakalpojuma sniedzēja.
-	\item Ierīce atbalsta un ļauj pilnā sistēmas funkcionalitātē pieslēgties sistēmai. Lietotāja ierīce ir sasniegusi minimālo vajadzības slieksni, lai izmantotu produktu, bez problēmām.
-	\item Tiek pieņemts, ka lietotāja ierīcei ir stabils interneta savienojums. Bez stabila interneta savienojuma ir iespējami traucējumi lietotnes izmantošanā.
-	\item Sistēmā būs integrēti maksājumu ārpakalpojumi. Sistēmā būs iespēja iegūt maksas pakalpojumus.
-	\item Sistēma tiek veidota kā interneta lietotne, tāpēc ierobežojumi galvenokārt ir saistīti ar pārlūkprogrammu savietojamību. Tiek pieņemts, ka sistēmas lietotāji to lietos, izmantojot pārlūkprogrammas, kas atbalsta funkcionālas prasības, kas ir nepieciešamas, lai īstenotu korektu sistēmas darbību.
+	\item Ierīce atbalsta un ļauj pilnā sistēmas funkcionalitātē pieslēgties sistēmai.
+	      Lietotāja ierīce ir sasniegusi minimālo vajadzības slieksni, lai izmantotu produktu, bez problēmām.
+	\item Tiek pieņemts, ka lietotāja ierīcei ir stabils interneta savienojums.
+	      Bez stabila interneta savienojuma ir iespējami traucējumi lietotnes izmantošanā.
+	\item Sistēmā būs integrēti maksājumu ārpakalpojumi.
+	      Sistēmā būs iespēja iegūt maksas pakalpojumus.
+	\item Sistēma tiek veidota kā interneta lietotne, tāpēc ierobežojumi galvenokārt ir saistīti ar pārlūkprogrammu savietojamību.
+	      Tiek pieņemts, ka sistēmas lietotāji to lietos, izmantojot pārlūkprogrammas, kas atbalsta funkcionālas prasības, kas ir nepieciešamas, lai īstenotu korektu sistēmas darbību.
+	\item Sistēma izmantos maksājumu apstrādātāju pakalpojumus, kas atbalsta maksājumu veikšanu (maksājuma datu savākšanu) mājaslapā un to apstrādi ārpus sistēmas.
 \end{itemize}
