--- a/src/description/requirements.tex
+++ b/src/description/requirements.tex
@@ -4,14 +4,14 @@ Sistēmā ``MAFIJA'' tiks  realizētas sekojošās darījumprasības:
 	\item Lietotāju reģistrācija, autentifikācija;
 	\item Lietotāju un to privilēģiju pārvalde;
 	\item Lietotāju konta apstiprināšana, izmantojot e-pastu;
-	\item Lietotāju profilu personalizācija - profila attēla un segvārda redigēšana;
+	\item Lietotāju profilu personalizācija un kontu rediģešana;
 	\item Lietotāju stāvokļa virtuālajās telpās uzturēšana un izmaiņa;
 	\item Lietotāju informēšana, izmantojot paziņojumu sistēmu;
 	\item Sinhronizēta spēles stāvokļa atjaunināšana;
-	\item Spēļu konfigurāciju un lomu klāsta pārvalde;
-	\item Publisko un privāto virtuālo telpu pārvalde;
+	\item Spēles uzstādījumu un lomu klāsta publiska veidošana, rediģēšana un dzēšana;
+	\item Publisko un privāto virtuālo spēles istabu pārvalde;
 	\item Spēles automātiska vadība;
 	\item Kopēja un ierobežotu grupu (lomu atkarīga) tērzēšana;
-	\item Privilēģiju izmaiņa, imantojot bezpersonisku maksājumu sistēmu;
+	\item Privilēģiju izmaiņa, izmantojot bezpersonisku maksājumu sistēmu;
 	\item Lietotāju moderēšana;
 \end{enumerate}
