--- a/src/description/restrictions.tex
+++ b/src/description/restrictions.tex
@@ -1,14 +1,13 @@
 \subsection{Vispārējie ierobežojumi}
-
 \begin{enumerate}
 	\item Drošības un aizsardzības apsvērumi:
 	      \begin{enumerate}
-		      \item Lietotāju paroles tiek uzglabāti šifrētā veidā, izmantojot SHA-2 algoritmu.
+		      \item Lietotāju paroles tiek uzglabātas šifrētā veidā, izmantojot SHA-2 algoritmu.
 		      \item Tiek izmantota trešās puses autentifikācijas integrācija (izmantojot ārējas bibliotēkas).
 	      \end{enumerate}
 	\item Regulējoša politika:
 	      \begin{enumerate}
-		      \item Par analītikas nolūkos izmantotu sīkdatņu atļauja tiek prasīta.
+		      \item Par analītikas nolūkos izmantotu sīkdatņu atļauja tiek prasīta.
 	      \end{enumerate}
 	\item Izstrādes vides, tehnoloģijas un tīmekļa ierobežojumi
 	      \begin{enumerate}
@@ -18,5 +17,3 @@
 		      \item Sistēmas ietvaros mitināta vietne ir kopīga neatkarīgi no ierīces, no kuras tā tiek izmantota (netiek izmantots apakšdomēna vārds mobilo tālruņu lietotājiem).
 	      \end{enumerate}
 \end{enumerate}
-
-
