--- a/src/legends.tex
+++ b/src/legends.tex
@@ -1,6 +1,9 @@
 \section*{Apzīmējumu saraksts}
 \addcontentsline{toc}{section}{Apzīmējumu saraksts}
-MAFIJA - tiešsaistes lomu spēles platforma;
+
+Abonements - uz noteiktu laiku par maksu piešķirtās papildus lietotāja iespējas;
+
+Karodziņš  - Būla mainīgais, i.e., mainīgais, kas var būt vai nu patiess vai nu nepatiess;
 
 PPS - programmatūras prasību specifikācija;
 
@@ -8,7 +11,11 @@ ER modelis - entitāšu saišu modelis (angl. entity relationship model);
 
 DPD - datu plūsmas diagramma;
 
-LBPK - Uz lomu bāzēta piekļuves kontole;
+Spēles istaba - lietotāju kopa, kas ir saistīti vienas spēles ietvaros, i.e., spēles instance;
+
+Sistēmas loma - sistēmas lietotāju grupa ar noteiktām privilēģijām;
+
+Loma - spēlēs loma, kam piemīt noteiktās darbības un trūkumi;
 
 Maksas siena - maksājums par lietotāju pieeju daļai no sistēmas piedāvātās funkcionalitātes;
 
