--- a/src/requirements/functional-requirements/index.tex
+++ b/src/requirements/functional-requirements/index.tex
@@ -1,10 +1,7 @@
 \subsection{Funkcionālās prasības}
-\input{./src/requirements/functional-requirements/general-notices.tex}
-\subsubsection{Citas apakšnodaļas ar vispārīgu lietu aprakstu}
+% \input{./src/requirements/functional-requirements/general-notices.tex}
+% TODO: remove the following line
+% [Citas apakšnodaļas ar vispārīgu lietu aprakstu]
+
 \input{./src/requirements/functional-requirements/function-modules.tex}
-
-\subsubsection{Modulis A}
-[2. Līmeņa DPD modelis]
-\subsubsection{Pārējie Modulis X}
-[2. Līmeņa DPD modelis]
-
+\input{./src/requirements/functional-requirements/modules/index.tex}
