Made subchapter titles smaller and left aligned

--- a/Mafia-the-Game.tex
+++ b/Mafia-the-Game.tex
@@ -54,10 +54,10 @@
 
 
 \titleformat{\section}{\large\bfseries\centering\vfill\eject\MakeUppercase}{\thesection}{1em}{} % section formatting
-\titleformat{\subsection}{\large\bfseries\centering}{\thesubsection}{1em}{} % subsection formatting
-\titleformat{\subsubsection}{\large\bfseries\centering}{\thesubsubsection}{1em}{} % subsubsection formatting
-\titleformat{\paragraph}{\large\bfseries\centering}{\theparagraph}{1em}{} % paragraph formatting
-\titleformat{\subparagraph}{\large\bfseries\centering}{\thesubparagraph}{1em}{} % subparagraph formatting
+\titleformat{\subsection}{\bfseries}{\thesubsection}{1em}{} % subsection formatting
+\titleformat{\subsubsection}{\bfseries}{\thesubsubsection}{1em}{} % subsubsection formatting
+\titleformat{\paragraph}{\bfseries}{\theparagraph}{1em}{} % paragraph formatting
+\titleformat{\subparagraph}{\bfseries}{\thesubparagraph}{0em}{} % subparagraph formatting
 
 
 % Modify caption style
