Moved module chapters up by one level

--- a/src/utils/function-table.tex
+++ b/src/utils/function-table.tex
@@ -31,7 +31,7 @@
 
 
 \newcommand{\moduleFunctionTable}[9]{
-	\subparagraph{#1} \label{tab:#2}
+	\paragraph{#1} \label{tab:#2}
 	\textbf{Funkcijas nosaukums}: #3
 
 	\textbf{Funkcijas identifikators}: #4
