Translated the ToC title

--- a/Mafia-the-Game.tex
+++ b/Mafia-the-Game.tex
@@ -35,6 +35,7 @@
 
 \urlstyle{rm}
 
+\renewcommand{\contentsname}{Saturs}
 
 \titlespacing*{\section}{0pt}{2em}{2em}
 \titlespacing*{\subsection}{0pt}{2em}{2em}
